--- a/api/calculateParticipantScores/package.json
+++ b/api/calculateParticipantScores/package.json
@@ -4,17 +4,25 @@
   "description": "turn a csv of propbets data into a json of participant scores",
   "main": "src/index.js",
   "scripts": {
+    "test": "jest",
     "build": "npx tsc",
     "zip": "cd dist && zip -r ../output.zip ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-lambda": "^1.0.7"
+    "aws-lambda": "^1.0.7",
+    "d3": "^7.8.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/aws-lambda": "^8.10.133",
+    "@types/d3": "^7.4.3",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   }
 }
