--- a/api/calculateParticipantScores/tsconfig.json
+++ b/api/calculateParticipantScores/tsconfig.json
@@ -4,7 +4,9 @@
     "target": "es2018",
     "module": "commonjs",
     "outDir": "dist",
-    "strict": false
+    "strict": false,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
   },
   "include": ["src/**/*.ts"],
   "exclude": []
