--- a/api/calculateParticipantScores/tsconfig.json
+++ b/api/calculateParticipantScores/tsconfig.json
@@ -1,13 +1,11 @@
-// tsconfig.json
 {
-  "compilerOptions": {
-    "target": "es2018",
-    "module": "commonjs",
-    "outDir": "dist",
-    "strict": false,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-  },
-  "include": ["src/**/*.ts"],
-  "exclude": []
-}
+    "compilerOptions": {
+      "target": "es2018",
+      "module": "commonjs",
+      "outDir": "dist",
+      "strict": false
+    },
+    "include": ["src/**/*.ts"],
+    "exclude": []
+  }
+  
