--- a/api/calculateParticipantScores/tsconfig.json
+++ b/api/calculateParticipantScores/tsconfig.json
@@ -3,7 +3,8 @@
       "target": "es2018",
       "module": "commonjs",
       "outDir": "dist",
-      "strict": false
+      "strict": false,
+      "resolveJsonModule": true,
     },
     "include": ["src/**/*.ts"],
     "exclude": []
