--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
