--- a/api/shoeboxBets/createBet/package.json
+++ b/api/shoeboxBets/createBet/package.json
@@ -1,7 +1,7 @@
 {
   "name": "createbet",
   "version": "1.0.0",
-  "description": "create a new lockbox bet",
+  "description": "create a new shoebox bet",
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
@@ -17,6 +17,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "aws-lambda": "^1.0.7"
+    "aws-lambda": "^1.0.7",
+    "joi": "^17.13.3"
   }
 }
