--- a/api/shoeboxBets/createBet/tsconfig.json
+++ b/api/shoeboxBets/createBet/tsconfig.json
@@ -6,7 +6,7 @@
       "outDir": "dist",
       "strict": false
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "types/**/*.ts"],
     "exclude": []
   }
   
