--- a/api/shoeboxBets/crud-bets/package.json
+++ b/api/shoeboxBets/crud-bets/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "aws-lambda": "^1.0.7",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "uuid": "^11.0.3"
   }
 }
